feat: EnvironmentUtil for reading out variables